--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-agp = "8.9.3"
+agp = "8.11.0"
 coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.7"
-kotlin = "2.0.21"
-ksp-version = "2.0.21-1.0.27"
+glanceAppwidget = "1.1.1"
+kotlin = "2.2.0"
+ksp-version = "2.2.0-2.0.2"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -13,18 +14,20 @@ activityCompose = "1.10.1"
 composeBom = "2025.06.01"
 desugar-jdk-libs = "2.1.5"
 ktor = "2.3.12"
-koin = "3.5.6"
-lottieCompose = "6.3.0"
+koin = "4.1.0"
+lottieCompose = "6.6.7"
 material3-adaptive = "1.1.0"
 compose-material-icons-extended = "1.7.8"
 navigationCompose = "2.9.1"
 roomRuntime = "2.7.2"
-slf4jNop = "2.0.9"
+slf4jNop = "2.0.17"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-glance-appwidget = { module = "androidx.glance:glance-appwidget", version.ref = "glanceAppwidget" }
+androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glanceAppwidget" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
